--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,5 @@ springdoc.swagger-ui.path=/iam-service/swagger-ui.html
 springdoc.api-docs.path=/iam-service/v3/api-docs
 
 # Port Configuration
-server.port=8081
+server.port=9300
+server.address=0.0.0.0
