--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.campusmov.platform.iamservice.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 spring.jpa.properties.hibernate.format_sql=true
 
+# Email Sender Configuration
+email.username=${EMAIL_USER:user@email.com}
+email.password=${EMAIL_PASS:password}
+
 # Swagger Configuration
 springdoc.swagger-ui.path=/iam-service/swagger-ui.html
 springdoc.api-docs.path=/iam-service/v3/api-docs
