feat: add eureka client cloud and set connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.jpa.properties.hibernate.format_sql=true
 email.username=${EMAIL_USER:user@email.com}
 email.password=${EMAIL_PASS:password}
 
+# Eureka Configuration
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_HOST:http://localhost}:${EUREKA_SERVER_PORT:8761}/eureka
+
 # Swagger Configuration
 springdoc.swagger-ui.path=/iam-service/swagger-ui.html
 springdoc.api-docs.path=/iam-service/v3/api-docs
