--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.campusmov.platform</groupId>
-    <artifactId>IAM-Service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>iam-service</artifactId>
+    <version>1.0.1</version>
     <name>IAM-Service</name>
     <description>IAM-Service</description>
     <url/>
@@ -27,8 +27,9 @@
         <url/>
     </scm>
     <properties>
-        <java.version>22</java.version>
+        <java.version>21</java.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
+        <dockerPassword>dockerPassword</dockerPassword>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -147,6 +148,21 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <image>
+                        <builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>
+                        <name>jhosepmyr/${project.artifactId}:${project.version}</name>
+                        <publish>true</publish>
+                        <env>
+                            <BP_JVM_VERSION>21</BP_JVM_VERSION>
+                            <BP_JVM_TYPE>JDK</BP_JVM_TYPE>
+                        </env>
+                    </image>
+                    <docker>
+                        <publishRegistry>
+                            <username>jhosepmyr</username>
+                            <password>${dockerPassword}</password>
+                        </publishRegistry>
+                    </docker>
                 </configuration>
             </plugin>
         </plugins>
