--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring Application Name
-spring.application.name=iam-Service
+spring.application.name=iam-service
 
 # Spring DataSource Configuration MySQL
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3325}/${DB_NAME:identity_access_management_service}
