--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.campusmov.platform</groupId>
     <artifactId>iam-service</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
     <name>IAM-Service</name>
     <description>IAM-Service</description>
     <url/>
@@ -150,7 +150,7 @@
                     </excludes>
                     <image>
                         <builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>
-                        <name>jhosepmyr/${project.artifactId}:${project.version}</name>
+                        <name>jhosepmyr/uni-ride_${project.artifactId}:${project.version}</name>
                         <publish>true</publish>
                         <env>
                             <BP_JVM_VERSION>21</BP_JVM_VERSION>
