--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,12 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_HOST:http://localhost}:${EU
 springdoc.swagger-ui.path=/iam-service/swagger-ui.html
 springdoc.api-docs.path=/iam-service/v3/api-docs
 
+# Kafka Configuration
+spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
+
+# Spring Cloud Stream Configuration
+spring.cloud.function.definition=profileCreatedEvent
+spring.cloud.stream.bindings.profileCreatedEvent-in-0.destination=profile-topic
+
 # Port Configuration
 server.port=9300
