--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ email.password=${EMAIL_PASS:password}
 
 # Eureka Configuration
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_HOST:http://localhost}:${EUREKA_SERVER_PORT:8761}/eureka
+eureka.client.enabled=false
 
 # Swagger Configuration
 springdoc.swagger-ui.path=/iam-service/swagger-ui.html
